# horizon5-mt-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  compile_flags.txt  crontab  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  uncrustify.cfg
.claude/skills/commands/: SKILL.md
.githooks/: pre-commit  pre-push
app/: apps.py  audit.py  routing.py  scheduler.py  urls.py
app/admin/: __init__.py
app/collections/: __init__.py  account_snapshot.py  base.py  event.py  heartbeat.py  log.py  order.py  strategy_snapshot.py
app/database/: mongodb.py
app/enums/: __init__.py  account_status.py  close_reason.py  event_key.py  event_status.py  exception_mapping.py  heartbeat_event.py  heartbeat_system.py  http_status.py  order_status.py  system_role.py
app/http/: response.py
app/http/controllers/: account.py  account_snapshot.py  api_key.py  auth.py  base.py  event.py  health.py  heartbeat.py  log.py  media.py  order.py  strategy.py  strategy_snapshot.py
app/http/exceptions/: base.py
app/http/middleware/: login_email.py  login_rate.py  login_throttle.py  refresh_throttle.py  role_based.py
app/http/permissions/: account.py  api_key.py  base.py  event.py  media.py  role.py
app/http/requests/: fields.py  list_request.py  validators.py
app/http/resources/: event.py  media_file.py  user.py
app/jobs/: check_stuck_events.py  clean_expired_media.py  purge_account_snapshots.py  purge_events.py  purge_heartbeats.py  purge_logs.py  purge_strategy_snapshots.py
app/management/commands/: _base_event_command.py  _event_api_client.py  check_stuck_events.py  clean_expired_media.py  dev_account_info.py  dev_close_order.py  (+19 more)
app/migrations/: 0001_initial.py  0002_apikey.py  0003_media_file.py  0004_account_pk_and_trading_fields.py  0005_strategy.py  0006_add_status_to_account.py
app/models/: __init__.py  account.py  api_key.py  base.py  media_file.py  strategy.py  user.py
app/monitors/: expired_media.py  stuck_events.py
config/: urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/api/: openapi-dist.yaml  openapi.yaml
requirements/: base.txt  local.txt  production.txt
scripts/: tailscale_forward.py
scripts/helpers/: docker.sh  logger.sh
scripts/make/: run-db-migrate.sh  run-db-seed-database.sh  run-db-seed.sh  run-dev-tailscale.sh  run-dev.sh  run-docker-build.sh  run-docker-down.sh  run-docker-up.sh  run-docs-bundle.sh  run-get-producer-credentials.sh  run-hooks-install.sh  run-linter-checks.sh  run-linter-fixes.sh  run-tests.sh
services/logger/: logger.cpp
tests/: conftest.py
tests/feature/: conftest.py
(+70 files in other folders)
