[project]
name = "horizon5-mt-api"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T20",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "RUF",
    "S",
]
ignore = [
    "UP045",
    "UP006",
    "UP035",
    "UP007",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"app/migrations/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app", "config"]
exclude = [".venv", "__pycache__", "app/migrations"]
venvPath = "."
venv = ".venv"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
