[project]
name = "horizon5-mt-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.16",
    "djangorestframework-simplejwt>=5.5",
    "django-environ>=0.12",
    "django-cors-headers>=4.7",
    "psycopg[binary]>=3.2",
    "pymongo>=4.15",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-django>=4.10",
]
prod = [
    "gunicorn>=23.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T20",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "RUF",
    "S",
]
ignore = [
    "UP045",
    "UP006",
    "UP035",
    "UP007",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"app/migrations/*" = ["ALL"]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app", "config"]
exclude = [".venv", "__pycache__", "app/migrations"]
venvPath = "."
venv = ".venv"
reportAttributeAccessIssue = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportIndexIssue = false
reportAssignmentType = false
reportArgumentType = false
reportGeneralTypeIssues = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
